# rls

./: .gitignore  .gitmodules  Makefile  README.md  conda-lock.yml  environment.yml  mypy.ini  pyproject.toml
notebooks/: hyperbolic_gradient_model.ipynb  magnetic_hole_model.ipynb  uniform_plasma_simulation.ipynb  whistler_at_hyperbolic_gradient_model-Copy1.ipynb
notebooks/fig_setup/: diagnostics.ipynb  plot.ipynb  run.ipynb
notebooks/measurements/: measured_distribution.ipynb  model_phase_space.ipynb  observed_magnetic_field.ipynb
notebooks/vary_Bw/: plot.ipynb  run.ipynb
projects/whistler_in_magnetic_gradient/energy_space/: config.py  plot.py  process.sh  run.py  submit_jobs.sh
projects/whistler_in_magnetic_gradient/setup_and_single_particle_trajectories/: config.py  plot.py  run_array_of_initial_conditions.py  run_random_initial_conditions.py
projects/whistler_in_magnetic_gradient/vary_gradient/: config.py  plot.py  plot_job.sh  submit_jobs.sh
projects/whistler_in_magnetic_gradient/vary_wave_amplitude/: Makefile  config.py  plot.py  process.py  run.py
scripts/Fig_energy_space/: config.py  plot.py  process.py  run.py  run_A.py  run_B.py  run_C.py  run_array_IC.py  run_distribution.py  submit_template.sh
scripts/Fig_setup/: plot.py  run_array_IC.py  run_random_IC.py  submit.sh
scripts/Fig_vary_Bh/: config.py  plot.py  process.py  run.py  submit_jobs.sh  submit_template.sh
scripts/Fig_vary_Bw/: config.py  plot.py  process.py  run.py  submit_jobs.sh  submit_template.sh
scripts/ascending_edge/: config.py  plot.py  run.py
src/rls/: io.py  simulation.py
src/rls/data_types/: __init__.py  model.py  natural_units.py  particle.py  quantity.py  species.py
src/rls/formula/: conversions.py  physics.py
src/rls/integrators/: exact_boris.py
src/rls/models/: __init__.py  hyperbolic_gradient.py  magnetic_hole.py  uniform_plasma.py  whistler_at_gradient.py
src/rls/models/whistler/: gradient_background.py  magnetic_hole_background.py  properties.py
src/rls/units/: __init__.py  magnetized_plasma.py
src/rls/units/tests/: test_magnetized_plasma_units.py
