[tool.poetry]
name = "rls"
version = "0.1.0"
description = ""
authors = ["Tien Vo <tien.a.vo@proton.me>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{ include = "rls", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
zarr = "^2.16.1"
astropy = "^6.0.0"
dask = "^2023.12.1"
numba = "^0.58.1"
ipycytoscape = "^1.3.3"
xarray = "^2023.12.0"
tvolib = "^0.5.1"
datashader = "^0.16.0"
holoviews = "^1.18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyterlab = "^4.0.9"
jupyterlab-vim = "^4.1.0"
line-profiler = "^4.1.2"
memory-profiler = "^0.61.0"

[tool.ruff]
line-length = 79
exclude = [
    "__init__.py",
]

[tool.ruff.lint]
select = ["F", "I", "E", "W"]
ignore = ["E731"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 70


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
