[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rls"
version = "0.1.0"
description = "Package for performing relativistic Lorentz simulations (rls)"
authors = [
    "Tien Vo <tvo.work@proton.me>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/tien-vo/rls"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [
    { include = "rls", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
zarr = "^2.16.1"
astropy = "^6.0.0"
dask = "^2023.12.1"
numba = "^0.58.1"
ipycytoscape = "^1.3.3"
xarray = "^2023.12.0"
tvolib = "^0.5.1"
datashader = "^0.16.0"
holoviews = "^1.18.1"
colorcet = "^3.0.1"
matplotlib-label-lines = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyterlab = "^4.0.9"
jupyterlab-vim = "^4.1.0"
line-profiler = "^4.1.2"
memory-profiler = "^0.61.0"

[tool.ruff]
line-length = 79
exclude = [
    "__init__.py",
]

[tool.ruff.lint]
select = ["F", "I", "E", "W"]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 70
