[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rls"
version = "0.1.0"
description = "Package for performing relativistic Lorentz simulations (rls)"
authors = [
    "Tien Vo <tvo.work@proton.me>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/tien-vo/rls"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [
    { include = "rls", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
zarr = "^2.18.2"
numpy = "^1.26.4"
numba = "^0.60.0"
matplotlib-label-lines = "^0.7.0"
tvolib = { git = "https://github.com/tien-vo/tvolib.git", rev = "8a258b9" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyterlab = "^4.0.9"
jupyterlab-vim = "^4.1.0"
line-profiler = "^4.1.2"
memory-profiler = "^0.61.0"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
